--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -1,3 +1,12 @@
+.container-login-create {
+  max-width: 100% !important;
+  gap: 50px;
+  width: 42rem !important;
+  height: 100%;
+  padding: 5px 5px !important;
+  display: flex;
+}
+
 .login-create-form {
   width: 21rem;
 }
