--- a/app/views/layouts/store/_login_or_register.html.erb
+++ b/app/views/layouts/store/_login_or_register.html.erb
@@ -32,7 +32,7 @@
         <h1>Ainda não é cliente Ingresso.com?</h1>
         <span>Compre ingressos e combos de pipoca para ir ao cinema com segurança e mais comodidade!</span>
       </div>
-      <a href="#" class="link-create-new-account">Criar uma nova conta</a>
+      <a href="<%= new_user_registration_path %>" class="link-create-new-account">Criar uma nova conta</a>
     </div>
     <div class="container-line-white"></div>
     <div class="container-login">
