--- a/app/assets/stylesheets/devise/ingresso_top.css
+++ b/app/assets/stylesheets/devise/ingresso_top.css
@@ -6,7 +6,15 @@
   align-items: center;
   justify-content: center;
 
-  >svg {
-    width: 348px;
+  >a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+}
+
+.svg-ingresso {
+  width: 348px;
 }
