--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,45 @@
-<h2>Sign up</h2>
-<%= simple_form_for(resource, html: { class: 'login-form' }, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="text-center">
-    <%= f.error_notification %>
-    <%= render "devise/shared/error_messages" %>
-  </div>
-  <div class="form-inputs">
-    <%= f.input :name,
+<div class="container-new-user-main">
+  <h2 class="h2-register">Cadastre-se</h2>
+  <p class="p-info-buy-ticket">Compre ingressos e combos de pipoca com conforto e comodidade.</p>
+  <%= simple_form_for(resource, html: { class: 'login-form' }, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div class="text-center">
+      <%= f.error_notification %>
+      <%= render "devise/shared/error_messages" %>
+    </div>
+    <div class="form-inputs">
+      <%= f.input :name,
                 required: true,
                 autofocus: true,
                 label: false, #tira nome "email",
                 placeholder: 'Nome'%>
-    <%= f.input :phone,
+      <%= f.input :phone,
                 input_html: { class: "mask-phone" },
                 required: true,
                 autofocus: true,
                 label: false, #tira nome "email",
                 placeholder: 'Telefone'%>
-    <%= f.input :email,
+      <%= f.input :email,
                 required: true,
                 autofocus: true,
                 label: false, #tira nome "email",
                 placeholder: 'E-mail',
                 input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
+      <%= f.input :password,
                 required: true,
                 label: false, #tira nome "email",
                 placeholder: 'senha no mínimo 6 caracteres',
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
+      <%= f.input :password_confirmation,
                 required: true,
                 label: false, #tira nome "email",
                 placeholder: 'Confirmar senha',
                 input_html: { autocomplete: "new-password" } %>
-  </div>
-  <%= render "devise/shared/button_submit", f: f, text: 'Cadastrar' %>
-<% end %>
-<div class="form-group d-md-flex">
-  <div class="w-100 text-md-right">
-    <%= render "devise/shared/links" %>
+    </div>
+    <%= render "devise/shared/button_submit", f: f, text: 'Cadastrar' %>
+  <% end %>
+  <div class="form-group d-md-flex">
+    <div class="w-100 text-md-right">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
