criando a mascara para cpf

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,12 @@
                 autofocus: true,
                 label: false, #tira nome "email",
                 placeholder: 'Telefone'%>
+      <%= f.input :cpf,
+                input_html: { class: "mask-cpf" },
+                required: true,
+                autofocus: true,
+                label: false, #tira nome "email",
+                placeholder: 'Cpf'%>
       <%= f.input :email,
                 required: true,
                 autofocus: true,
