--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -1,3 +1,16 @@
+.container-new-user-main {
+  width: 55rem;
+  /* width: 80%; */
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 1000px) {
+  .container-new-user-main {
+    width: 80%;
+  }
+}
+
 .h2-register {
   font-size: 23px;
   font-weight: 600;
@@ -6,4 +19,13 @@
 
 .p-info-buy-ticket {
   font-size: 14px;
+}
+
+.container-name-cpf {
+  display: flex;
+  gap: 10px;
+}
+
+.user_name {
+  width: 60%;
 }
