--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,28 +2,20 @@
   <h2 class="h2-register">Cadastre-se</h2>
   <p class="p-info-buy-ticket">Compre ingressos e combos de pipoca com conforto e comodidade.</p>
   <%= simple_form_for(resource, html: { class: 'login-form' }, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="text-center">
-      <%= f.error_notification %>
-      <%= render "devise/shared/error_messages" %>
-    </div>
     <div class="form-inputs">
-      <%= f.input :name,
+      <div class="container-name-cpf">
+        <%= f.input :name,
                 required: true,
                 autofocus: true,
                 label: false, #tira nome "email",
                 placeholder: 'Nome'%>
-      <%= f.input :phone,
-                input_html: { class: "mask-phone" },
-                required: true,
-                autofocus: true,
-                label: false, #tira nome "email",
-                placeholder: 'Telefone'%>
-      <%= f.input :cpf,
+        <%= f.input :cpf,
                 input_html: { class: "mask-cpf" },
                 required: true,
                 autofocus: true,
                 label: false, #tira nome "email",
                 placeholder: 'Cpf'%>
+      </div>
       <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -40,6 +32,12 @@
                 label: false, #tira nome "email",
                 placeholder: 'Confirmar senha',
                 input_html: { autocomplete: "new-password" } %>
+      <%# f.input :phone,
+                input_html: { class: "mask-phone" },
+                required: true,
+                autofocus: true,
+                label: false, #tira nome "email",
+                placeholder: 'Telefone'%>
     </div>
     <%= render "devise/shared/button_submit", f: f, text: 'Cadastrar' %>
   <% end %>
