--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -14,6 +14,14 @@
   height: 100vh;
 }
 
+.container-ingresso-top-yield {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
 .container-top-footer {
   display: flex;
   flex-direction: column;
