--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -52,3 +52,19 @@
 .user_email {
   width: 50%;
 }
+
+.container-info-password-warn {
+  display: flex;
+  flex-direction: column;
+}
+
+.span-1 {
+  color: black;
+}
+
+.span-2,
+.span-3,
+.span-4,
+.span-5 {
+  color: #00000054;
+}
