--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,13 @@
                 label: false, #tira nome "email",
                 placeholder: '*E-mail',
                 input_html: { autocomplete: "email" }%>
+      <div class="container-info-password-warn">
+        <span class="span-1">Sua senha precisa atender aos seguintes critérios:</span>
+        <span class="span-2">Mínimo uma letra minúscula *</span>
+        <span class="span-3">Mínimo uma letra maiúscula *</span>
+        <span class="span-4">Mínimo um número *</span>
+        <span class="span-5">Mínimo de 8 caracteres *</span>
+      </div>
       <%# f.input :phone,
                 input_html: { class: "mask-phone" },
                 required: true,
