--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,6 +43,12 @@
         <span class="span-4">Mínimo um número *</span>
         <span class="span-5">Mínimo de 8 caracteres *</span>
       </div>
+      <div class="form-check container-check">
+        <input class="form-check-input input-checkbox" type="checkbox" id="invalidCheck" required>
+        <label class="form-check-label label-receive-news" for="invalidCheck">
+          Quero receber novidades e mensagens da Ingresso.com.
+        </label>
+      </div>
       <%# f.input :phone,
                 input_html: { class: "mask-phone" },
                 required: true,
