--- a/app/views/devise/shared/_button_submit.html.erb
+++ b/app/views/devise/shared/_button_submit.html.erb
@@ -1,3 +1,1 @@
-<div class="form-group form-enter">
-  <%= f.button :submit, text, class: 'btn btn-primary rounded btn-block p-3'%>
-</div>
+<%= f.button :submit, text, class: 'button-continue'%>
