--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,9 +49,9 @@
         <div class="container-birth-date">
           <div class="container-month">
             <%= f.simple_fields_for :additional_info_user do |aiu| %>
-              <%= aiu.input :birth_date %>
+              <%= aiu.input :birth_date, as: :date, start_year: Date.today.year, end_year: 1900, wrapper_html: { class: 'container-birth-date-custom' } %>
               <%= aiu.input :gender %>
-              <%= aiu.input :phone %>
+              <%= aiu.input :phone, input_html: { class: "mask-phone" } %>
             <% end %>
           </div>
         </div>
