--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,10 +50,12 @@
           <div class="container-month">
             <%= f.simple_fields_for :additional_info_user do |aiu| %>
               <%= aiu.input :birth_date, as: :date, start_year: Date.today.year, end_year: 1900, wrapper_html: { class: 'container-birth-date-custom' } %>
-              <%= aiu.input :gender %>
-              <%= aiu.input :phone, input_html: { class: "mask-phone" } %>
+              <%= aiu.input :gender, as: :select, collection: ['Male', 'Female'], prompt: "I'd rather not say" %>
             <% end %>
           </div>
+          <%= f.simple_fields_for :additional_info_user do |aiu| %>
+            <%= aiu.input :phone, input_html: { class: "mask-phone" } %>
+          <% end %>
         </div>
       </div>
       <div class="form-check container-check">
