--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -74,7 +74,7 @@
   display: flex;
   align-items: center;
   gap: 10px !important;
-  margin-top: 10px;
+  margin-top: 0px !important;
 }
 
 #invalidCheck {
@@ -143,7 +143,7 @@
 }
 
 .container-additional-info-user {
-  margin-bottom: 35px;
+  margin-bottom: 20px;
 }
 
 .container-birth-date-custom {
@@ -357,8 +357,6 @@
   border-color: rgb(5 118 202) !important;
   border-left: 4px solid rgb(5 118 202);
 }
-
-.input-logradouro {}
 
 .input-numero {}
 
