--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -131,6 +131,8 @@
 
   >input {
     color: white;
+    pointer-events: none;
+
   }
 }
 
@@ -358,12 +360,6 @@
   border-left: 4px solid rgb(5 118 202);
 }
 
-.input-numero {}
-
-.input-complemento {}
-
-.input-referencia {}
-
 .container-neighborhood-state-city {
   display: flex;
   gap: 15px;
@@ -422,4 +418,26 @@
 
 #user_additional_info_user_attributes_estado:focus {
   outline: none;
+}
+
+.container-span-regulated-use-site {
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+.span-color-blue-highlight {
+  color: rgb(52, 120, 193) !important;
+  cursor: pointer;
+}
+
+.span-color-blue-highlight:hover {
+  color: rgb(12 82 157) !important;
+}
+
+.container-span-delete-account {
+  font-size: 14px;
+}
+
+.container-reCAPTCHA {
+  font-size: 14px;
 }
