--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@
         <div class="container-birth-date">
           <div class="container-month">
             <%= f.simple_fields_for :additional_info_user do |aiu| %>
-              <%= aiu.input :birth_date, as: :date, start_year: Date.today.year, end_year: 1900, wrapper_html: { class: 'container-birth-date-custom' } %>
+              <%= aiu.input :birth_date, required: false, as: :date, start_year: Date.today.year, end_year: 1900, wrapper_html: { class: 'container-birth-date-custom' } %>
               <%= aiu.input :gender, as: :select, collection: ['Male', 'Female'], prompt: "I'd rather not say" %>
             <% end %>
           </div>
@@ -85,12 +85,20 @@
           Quero receber novidades e mensagens da Ingresso.com.
         </label>
       </div>
-      <%# f.input :phone,
-                input_html: { class: "mask-phone" },
-                required: true,
-                autofocus: true,
-                label: false, #tira nome "email",
-                placeholder: 'Telefone'%>
+      <div class="container-span-regulated-use-site">
+        <span>O uso de nosso site e aplicativo é regulado por nossos <a class="span-color-blue-highlight">Termos de Uso.</a> Maiores informações sobre como usamos seus dados pessoais podem ser encontradas em nossa <a class="span-color-blue-highlight">Política de Privacidade</a> e <a class="span-color-blue-highlight">Política de Cookies.</a></span>
+      </div>
+      <div class="container-span-delete-account">
+        <span>Deseja excluir sua conta? Siga os <a class="span-color-blue-highlight">passos a seguir.</a></span>
+      </div>
+      <div class="container-reCAPTCHA">
+        <span>Este site é protegido pelo reCAPTCHA e pelo Google aplicando as seguintes <a class="span-color-blue-highlight">Políticas de Segurança</a> e <a class="span-color-blue-highlight">Termos de Serviço.</a></span>
+      </div>
+      <div 
+        class="g-recaptcha"
+        data-sitekey="6LfA6AUpAAAAAKuDPHeFgdUSz_dVtzPRrCTkPSbl"
+        data-callback="recaptchaCallbackChangePassword">
+      </div>
     </div>
     <div class="container-create-backlogin">
       <div class="container-back-the-login-link">
