--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -95,7 +95,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   margin-top: 30px;
   gap: 10px;
 }
@@ -132,7 +132,6 @@
   >input {
     color: white;
     pointer-events: none;
-
   }
 }
 
@@ -146,6 +145,7 @@
 
 .container-additional-info-user {
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .container-birth-date-custom {
@@ -165,7 +165,7 @@
 .container-birth-date {
   flex-direction: column;
   display: flex;
-  gap: 15px;
+  gap: 20px;
 }
 
 .container-month {
@@ -173,8 +173,21 @@
   gap: 10px;
 }
 
+.span-birth-date {
+  display: flex;
+  align-items: center;
+}
+
+.container-gender-phone {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 .user_additional_info_user_gender {
   margin-bottom: 0rem !important;
+  width: 160px;
+  height: 52px;
 
   >label {
     display: none !important;
@@ -182,7 +195,9 @@
 }
 
 #user_additional_info_user_attributes_gender {
-  padding: 9px 10px !important;
+  padding: 0px 5px !important;
+  width: 100%;
+  height: 100%;
   border: 1px solid #bdbdbd;
   border-left: 4px solid #bdbdbd;
   color: #494949 !important;
@@ -232,7 +247,17 @@
 
 .user_additional_info_user_phone {
   margin-bottom: 0px !important;
-  width: 50%;
+  width: 20%;
+
+
+  >input {
+    border: 1px solid #bdbdbd;
+    border-left: 4px solid #bdbdbd;
+    /* border: 1px solid rgb(217, 83, 79);
+    border-left: 4px solid rgb(217 83 79); */
+    color: #494949 !important;
+    border-radius: 0px !important;
+  }
 }
 
 .container-cep-custom {
@@ -418,6 +443,13 @@
 
 #user_additional_info_user_attributes_estado:focus {
   outline: none;
+}
+
+.container-main-recaptcha-and-spans {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 35px;
 }
 
 .container-span-regulated-use-site {
