criando pasta partial_registration_css para html

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -5,6 +5,7 @@
 @import 'devise/button_submit.css';
 @import 'devise/create_new_count.css';
 @import 'devise/registration_new.css';
+@import 'partial_registrations.scss';
 
 .container-main {
   display: flex;
