criando css inputs_additional_info_user

--- a/app/assets/stylesheets/partial_registrations.scss
+++ b/app/assets/stylesheets/partial_registrations.scss
@@ -1,1 +1,2 @@
 @import 'devise/partial_registrations_css/inputs_user_register.css';
+@import 'devise/partial_registrations_css/inputs_additional_info_user.css';
