--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -142,12 +142,12 @@
   padding: 10px;
 }
 
-.container-additional-info-user {
+/* .container-additional-info-user {
   margin-bottom: 20px;
   margin-top: 20px;
-}
+} */
 
-.container-birth-date-custom {
+/* .container-birth-date-custom {
   margin-bottom: 0rem !important;
 
   >label {
@@ -159,31 +159,31 @@
     justify-content: flex-start !important;
     gap: 10px !important;
   }
-}
+} */
 
-.container-birth-date {
+/* .container-birth-date {
   flex-direction: column;
   display: flex;
   gap: 20px;
-}
+} */
 
-.container-month {
+/* .container-month {
   display: flex;
   gap: 10px;
-}
+} */
 
-.span-birth-date {
+/* .span-birth-date {
   display: flex;
   align-items: center;
-}
+} */
 
-.container-gender-phone {
+/* .container-gender-phone {
   display: flex;
   align-items: center;
   gap: 15px;
-}
+} */
 
-.user_additional_info_user_gender {
+/* .user_additional_info_user_gender {
   margin-bottom: 0rem !important;
   width: 160px;
   height: 52px;
@@ -191,9 +191,9 @@
   >label {
     display: none !important;
   }
-}
+} */
 
-#user_additional_info_user_attributes_gender {
+/* #user_additional_info_user_attributes_gender {
   padding: 0px 5px !important;
   width: 100%;
   height: 100%;
@@ -205,7 +205,7 @@
 
 #user_additional_info_user_attributes_gender:focus {
   outline: none;
-}
+} */
 
 #user_additional_info_user_attributes_birth_date_1i {
   padding: 9px 10px !important;
@@ -259,29 +259,27 @@
   }
 }
 
-.container-cep-custom {
+/* .container-cep-custom {
   width: 40%;
   display: flex !important;
   align-items: center;
   gap: 10px;
   position: relative;
-}
+} */
 
-.mask-cep {
+/* .mask-cep {
   border: 1px solid #bdbdbd;
   border-left: 4px solid #bdbdbd;
-  /* border: 1px solid rgb(217, 83, 79);
-  border-left: 4px solid rgb(217 83 79); */
   color: #494949 !important;
   border-radius: 0px !important;
-}
+} */
 
 /* .mask-cep:focus {
   border-color: rgb(5 118 202) !important;
   border-left: 4px solid rgb(5 118 202);
 } */
 
-.button-cep-custom {
+/* .button-cep-custom {
   font-weight: 500;
   background-color: rgb(52 120 193);
   color: #fff;
@@ -299,18 +297,18 @@
 
 .button-cep-custom:focus {
   outline: none;
-}
+} */
 
-.user_additional_info_user_cep {
+/* .user_additional_info_user_cep {
   margin-bottom: 0px !important;
   width: 45%;
-}
+} */
 
-.link-dont-know-my-cep {
+/* .link-dont-know-my-cep {
   font-size: 13px !important;
   color: rgb(52, 120, 193) !important;
   cursor: pointer;
-}
+} */
 
 .svg-sort-up-new-user {
   display: none;
@@ -337,7 +335,7 @@
   gap: 24px;
 }
 
-.user_additional_info_user_logradouro,
+/* .user_additional_info_user_logradouro,
 .user_additional_info_user_numero,
 .user_additional_info_user_complemento,
 .user_additional_info_user_referencia {
@@ -350,16 +348,14 @@
 
 .user_additional_info_user_numero {
   width: 15%;
-}
+} */
 
-.input-logradouro,
+/* .input-logradouro,
 .input-numero,
 .input-complemento,
 .input-referencia {
   border: 1px solid #bdbdbd;
   border-left: 4px solid #bdbdbd;
-  /* border: 1px solid rgb(217, 83, 79);
-  border-left: 4px solid rgb(217 83 79); */
   color: #494949 !important;
   border-radius: 0px !important;
 }
@@ -387,9 +383,9 @@
 .container-neighborhood-state-city {
   display: flex;
   gap: 15px;
-}
+} */
 
-.user_additional_info_user_bairro,
+/* .user_additional_info_user_bairro,
 .user_additional_info_user_estado,
 .user_additional_info_user_cidade {
   margin-bottom: 0px !important;
@@ -423,9 +419,9 @@
 .input-cidade:focus {
   border-color: rgb(5 118 202) !important;
   border-left: 4px solid rgb(5 118 202);
-}
+} */
 
-#user_additional_info_user_attributes_estado {
+/* #user_additional_info_user_attributes_estado {
   padding-left: 5px;
   height: 100%;
   width: 100%;
@@ -442,7 +438,7 @@
 
 #user_additional_info_user_attributes_estado:focus {
   outline: none;
-}
+} */
 
 .container-main-recaptcha-and-spans {
   display: flex;
