criando use_site_info css

--- a/app/assets/stylesheets/partial_registrations.scss
+++ b/app/assets/stylesheets/partial_registrations.scss
@@ -1,2 +1,3 @@
 @import 'devise/partial_registrations_css/inputs_user_register.css';
 @import 'devise/partial_registrations_css/inputs_additional_info_user.css';
+@import 'devise/partial_registrations_css/use_site_info.css';
