--- a/app/assets/stylesheets/devise/registration_new.css
+++ b/app/assets/stylesheets/devise/registration_new.css
@@ -76,10 +76,10 @@
   margin-top: 0px !important;
 }
 
-#invalidCheck {
+/* #invalidCheck {
   width: 20px;
   height: 20px;
-}
+} */
 
 .input-checkbox {
   margin-top: 0.2rem !important;
@@ -440,7 +440,7 @@
   outline: none;
 } */
 
-.container-main-recaptcha-and-spans {
+/* .container-main-recaptcha-and-spans {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -467,4 +467,4 @@
 
 .container-reCAPTCHA {
   font-size: 14px;
-}
+} */
